# Qopy

./: .gitignore  .prettierignore  .prettierrc  GET_STARTED.md  README.md  README_ru.md  app.vue  bun.lockb  nuxt.config.ts  package.json  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  🐞-bug-report.md  🐞-bug-report.yml  💡-feature-request.md  💡-feature-request.yml
.github/scripts/: macOS.sh
.github/workflows/: build.yml  release.yml
assets/css/: index.scss  keybind.scss  settings.scss  style.scss
components/: ActionsMenu.vue  BottomBar.vue  FileIcon.vue  Noise.vue  Result.vue  TopBar.vue
components/Icons/: Bin.vue  Board.vue  Brush.vue  Code.vue  Ctrl.vue  Cube.vue  Expand.vue  File.vue  Gear.vue  Globe.vue  Image.vue  K.vue  Key.vue  Link.vue  Open.vue  Pen.vue  Rotate.vue  Shift.vue  T.vue  Text.vue  Zip.vue
components/Keys/: Cmd.vue  Enter.vue  Key.vue  Shift.vue
composables/: useActions.ts  useAppControl.ts
lib/: selectedResult.ts
pages/: index.vue  keybind.vue  settings.vue
patches/: wrdu-keyboard@3.0.0.patch  wrdu-keyboard@3.1.0.patch
plugins/: history.ts  keyboard.ts  selectedResult.ts  settings.ts
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  clipboard_listener.rs  database.rs  global_shortcut.rs  hotkeys.rs  lib.rs  main.rs  tray.rs  updater.rs
src-tauri/src/api/: clipboard.rs  database.rs  hotkeys.rs  mod.rs  tray.rs  updater.rs
src-tauri/src/db/: database.rs  history.rs  mod.rs  scheme.sql  settings.rs
src-tauri/src/db/migrations/: migration2.sql  v1.sql  v2.sql  v3.sql
src-tauri/src/sync/: mod.rs  pairing.rs  sync.rs
src-tauri/src/utils/: commands.rs  favicon.rs  keys.rs  logger.rs  mod.rs  types.rs
styles/: index.scss  settings.scss
types/: keyboard.d.ts  keys.ts  plugins.d.ts  types.ts
