[package]
name = "qopy"
version = "0.4.0"
description = "Qopy"
authors = ["pandadev"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-autostart = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-updater = "2.4.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-prevent-default = "1.0.2"
tauri-plugin-global-shortcut = "2.2.0"
# tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", branch = "v2" }
tauri-plugin-aptabase = { path = "C:\\Users\\pandadev\\Documents\\Developer\\Rust\\tauri-plugin-aptabase" }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.138"
rdev = "0.5.3"
rand = "0.9.0"
base64 = "0.22.1"
image = "0.25.5"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
url = "2.5.4"
regex = "1.11.1"
sha2 = "0.10.8"
lazy_static = "1.5.0"
time = "0.3.37"
global-hotkey = "0.6.3"
chrono = { version = "0.4.39", features = ["serde"] }
log = { version = "0.4.25", features = ["std"] }
uuid = "1.12.1"
active-win-pos-rs = "0.9.0"
include_dir = "0.7.4"
# hyperpolyglot = { git = "https://github.com/0pandadev/hyperpolyglot" }
applications = { git = "https://github.com/HuakunShen/applications-rs", branch = "dev" }
meta_fetcher = "0.1.1"
parking_lot = "0.12.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
